; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_regexp.c_WriteCompactIndex.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_regexp.c_WriteCompactIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i8**, i64)* @WriteCompactIndex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @WriteCompactIndex(i8** %0, i64 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8** %0, i8*** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %6

6:                                                ; preds = %10, %2
  %7 = load i64, i64* %4, align 8
  %8 = lshr i64 %7, 7
  store i64 %8, i64* %5, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %6
  %11 = load i64, i64* %4, align 8
  %12 = or i64 %11, 128
  %13 = inttoptr i64 %12 to i8*
  %14 = load i8**, i8*** %3, align 8
  %15 = getelementptr inbounds i8*, i8** %14, i32 1
  store i8** %15, i8*** %3, align 8
  store i8* %13, i8** %14, align 8
  %16 = load i64, i64* %5, align 8
  store i64 %16, i64* %4, align 8
  br label %6

17:                                               ; preds = %6
  %18 = load i64, i64* %4, align 8
  %19 = inttoptr i64 %18 to i8*
  %20 = load i8**, i8*** %3, align 8
  %21 = getelementptr inbounds i8*, i8** %20, i32 1
  store i8** %21, i8*** %3, align 8
  store i8* %19, i8** %20, align 8
  %22 = load i8**, i8*** %3, align 8
  ret i8** %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
